--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Maximizer Udaan</string>
-
+    <string name="str_atv_places">Enter Place Here</string>
 
 
 
